Bugzilla #698: added JVM memory settings to be able to handle large objects
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/eSciDocCoreAdmin/1.0/eSciDocCoreAdmin/@27456 5c398c58-3d0a-0410-a38c-d0825f6816e0